--- a/src/components/StreamPage/index.module.scss
+++ b/src/components/StreamPage/index.module.scss
@@ -13,9 +13,6 @@
 }
 
 .Logo {
-  height: auto;
-  max-height: 300px;
-  width: auto;
   max-width: 100%;
   margin: 0 auto;
 
@@ -47,5 +44,10 @@
 @include xlarge {
   .Wrapper {
     padding-bottom: $footer-height-large;
+  }
+
+  .Logo {
+    max-width: 700px;
+    margin: 0 auto;
   }
 }
